# Vee

./: .gitignore  CMakeLists.txt
include/: Common.hpp  EventDispatcher.hpp  Log.hpp  Utils.hpp  Vee.hpp  Window.hpp
include/core/: common.hpp  event_dispatcher.hpp  log.hpp  utils.hpp  window.hpp
include/platform/windows/: windows_window.hpp
lib/MikkTSpace/: mikktspace.c
lib/d3d12/: D3D12TokenizedProgramFormat.hpp  d3d12.h  d3d12compatibility.h  d3d12sdklayers.h  d3d12shader.h  d3d12video.h  d3dcommon.h  d3dx12_property_format_table.cpp  dxgiformat.h
lib/glm/detail/: type_quat.hpp
lib/optick/include/: optick.config.h
lib/tinygltf/: stb_image_write.h  tiny_gltf.h
src/: Vee.cpp  Window.cpp
src/platform/windows/: windows_window.cpp
